# GN_Project

GN_Project/: .cproject  .project  GN_Project.map  makefile
GN_Project/Code/: main.c  main.h
GN_Project/settings/: GN_Project.dnx  GN_Project_IAR.Debug.cspy.bat  GN_Project_IAR.Debug.general.xcl
GN_Project_G031/: .cproject  STM32G071CBU6_FLASH.ld  cstat_settings.xml  debug.config  makefile
GN_Project_G031/Debug/: subdir.mk
GN_Project_G031/settings/: GN_Project_G031.dnx  GN_Project_IAR.Debug.cspy.ps1
GN_Project_G031_HAL/: makefile
GN_Project_G031_HAL/Debug/: CMakeLists.txt  GN
GN_Project_G031_HAL/settings/: GN_Project_G031.dnx  GN_Project_IAR.Debug.driver.xcl
GN_Project_G070/: .cproject  makefile
GN_Project_G070/settings/: GN_Project.dnx  GN_Project_IAR.wsdt
GN_Project_G070_Cube/: .cproject  .mxproject  .project  GN_Project_G070 Debug.launch  GN_Project_G070.ioc
GN_Project_G070_Cube/Debug/: GN_Project_G070.elf  GN_Project_G070.list  GN_Project_G070.map  makefile  objects.list
GN_Project_Protection/: STM32G071CBU6_FLASH.ld  makefile  release.config
GN_Project_Protection/settings/: GN_Project_Test.dnx
GN_Project_Test/: .cproject  .project  makefile
GN_Project_Test/settings/: GN_Project.dnx
GN_Project_VSCode/: .cproject  GN_Project_IAR.dep  GN_Project_IAR.ewd  GN_Project_IAR.ewp  GN_Project_IAR.ewt  GN_Project_IAR.eww  makefile
GN_Project_VSCode/Debug/: CMakeLists.txt
GN_Project_VSCode/Debug/Exe/: GN_Project_IAR.out
GN_Project_VSCode/Debug/List/: GN_Project_IAR.map
GN_Project_VSCode/settings/: GN_Project.dnx  GN_Project_IAR.dnx  (+5 more)
(+157 files in other folders)
